fix bug visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,13 @@
   color: #f39c12;
 }
 
+[data-page] {
+  display: none;
+}
+
+[data-page].active {
+  display: block;
+}
 
 
 /*-----------------------------------*\
